modules/security/main.tf
locals {
  name_suffix = "${var.project_name}-${var.environment}"
}

locals {
  required_tags = {
    project     = var.project_name,
    environment = var.environment,
  }
  tags = merge(var.resource_tags, local.required_tags)
}

# App - EC2 Instance Security Group
resource "aws_security_group" "app_instance_sg" {
  name        = var.app_instance_security_group
  description = "Allowing requests to the app servers"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
  }
  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.cidr_blocks]
  }

  tags = local.tags
}
